--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,3 +1,9 @@
+#root {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .layout {
     display: grid;
     grid-template-rows: 1fr;
@@ -6,8 +12,6 @@
         "header header"
         "main aside";
     grid-gap: 0.3em;
-    margin-left: 10%;
-    margin-right: 10%;
     border-radius: 1rem;
 }
 
@@ -170,4 +174,71 @@ input {
     color: rgb(100, 91, 91);
     text-align: right;
     margin-right: 10px;
+}
+
+
+.user-login-interface {
+    font-family: cursive;
+    background-color: rgb(218, 201, 201);
+    margin-top: 20px;
+    padding: 5%;
+    border: solid red 2px;
+    border-radius: 1rem;
+    /* margin-left: 25%;
+    margin-right: 25%; */
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    align-items: center;
+}
+
+#login-h1 {
+    text-align: center;
+    font-family: cursive;
+    margin-bottom: 0;
+}
+
+#login-h4 {
+    margin-top: 0;
+    /* font-weight: 100; */
+}
+
+label {
+    margin-bottom: 1%;
+    margin-top: 1%;
+}
+
+#login-form {
+    margin-bottom: 2%;
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+}
+
+#gender-div {
+    margin-top: 2%;
+    margin-bottom: 2%;
+    display: flex;
+    justify-content: space-between;
+}
+
+button {
+    border-radius: 1rem;
+    border: 1px gray solid;
+    /* font-size: 15px; */
+    /* padding:1%; */
+    margin: 1%;
+    /* width: fit-content; */
+}
+
+#login-button {
+    margin-top: 5%;
+    width: fit-content;
+    align-self: center;
+}
+
+.login-input {
+    border: solid black 1px;
+    border-radius: 1em;
+    width: fit-content;
 }
