--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -18,20 +18,18 @@
 
 .header {
     font-family: cursive;
-
     grid-area: header;
     font-weight: 600;
     border: solid black 5px;
     text-align: center;
     background-color: rgb(193, 26, 26);
     color: bisque;
-    height: 12vh;
+    height: 15vh;
     border-radius: 1rem;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row-reverse;
-    justify-content: space-around;
-    align-content: center
+    align-content: center;
 }
 
 input {
@@ -43,6 +41,7 @@ input {
 }
 
 .search {
+    width: 50%;
     padding-top: 2%;
 }
 
@@ -53,7 +52,8 @@ input {
 
 
 .user-interface:hover {
-    zoom: 95%;
+    background-color: rgb(223, 14, 14);
+    zoom: 99%;
 }
 
 .p-l-img:hover {
@@ -65,9 +65,10 @@ input {
 }
 
 .user-interface {
+    margin-right: 15%;
     height: 80%;
     background-color: rgb(205, 40, 40);
-    width: 220px;
+    width: 350px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -79,17 +80,39 @@ input {
 }
 
 .user-image {
-    width: 60px;
+    width: 80px;
 }
 
-.user-state {
-    display: flex;
-    flex-wrap: wrap;
+.user-buttons {
+    margin: 0px;
+
+    max-width: max-content;
 }
 
-.user-text {
-    margin-left: 10px;
-    margin-right: 10px;
+
+
+.user-button:hover {
+    background-color: rgb(116, 108, 108);
+}
+
+.user-button {
+    color: rgb(255, 0, 0);
+    margin-top: 2%;
+    font-weight: 900;
+    /* border-color: beige; */
+    padding: 12px;
+    border-radius: 2rem;
+    background-color: rgb(71, 68, 68);
+}
+
+.user-playlist-button {
+    color: rgb(255, 0, 0);
+    margin-top: 2%;
+    font-weight: 900;
+    /* border-color: beige; */
+    padding: 12px;
+    border-radius: 2rem;
+    background-color: rgb(71, 68, 68);
 }
 
 .main {
@@ -101,11 +124,53 @@ input {
 
 .video-stream {
     grid-area: main;
-    border: solid black 5px;
+    /* border: solid black 5px; */
     text-align: center;
     border-radius: 1rem;
     background-color: rgb(194, 197, 199);
 
+}
+
+.singal-playlist {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 2fr 1fr;
+    align-items: center;
+    border: solid gray 1px;
+    border-radius: 1rem;
+}
+
+.p-l-icons {
+    margin-left: 10%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.p-l-name {
+    font-weight: 900;
+
+}
+
+.start-playing-the-playlist {
+    display: grid;
+    grid-template-columns: 10fr 1fr;
+    justify-items: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#pl-input-name {
+    width: 30%;
+    border: solid gray 1px;
+    border-radius: 1rem;
+    margin-left: 10%;
+}
+
+#edit-button {
+    margin-right: 50%;
 }
 
 .player-title {
@@ -124,12 +189,6 @@ input {
     overflow: hidden;
     overflow-y: scroll;
     background-color: rgb(194, 197, 199);
-}
-
-Link {
-
-    margin: 0;
-    padding: 0;
 }
 
 .p-l-img {
@@ -229,6 +288,12 @@ Link {
 label {
     margin-bottom: 1%;
     margin-top: 1%;
+}
+
+#date-input {
+    margin-top: 1%;
+    align-self: center;
+    margin-bottom: 2%;
 }
 
 #login-form {
